fixed spacing on nav bar

--- a/warehouse-management-frontend/src/app/components/navbar/navbar.component.css
+++ b/warehouse-management-frontend/src/app/components/navbar/navbar.component.css
@@ -35,3 +35,7 @@
     background-color: #f8f9fa;
     color: black;
 }
+
+.nav-links {
+    margin-top: 20%;
+}
